add css complete

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
                 <input type="text" class="search-input" placeholder="search...">
             </form>
             <div class="companies-container">
-                <button class="company">all</button>
-                <button class="company">ikea</button>
-                <button class="company">marcos</button>
+                <h2>company</h2>
+                <button class="company-btn">all</button>
+                <button class="company-btn">ikea</button>
+                <button class="company-btn">marcos</button>
             </div>
         </div>
         <div class="products-container">
