add html dynamically

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             </form>
             <div class="companies-container">
                 <h2>company</h2>
-                <button class="company-btn">all</button>
+                <!-- <button class="company-btn">all</button>
                 <button class="company-btn">ikea</button>
-                <button class="company-btn">marcos</button>
+                <button class="company-btn">marcos</button> -->
             </div>
         </div>
         <div class="products-container">
-            <div class="product">
+            <!-- <div class="product">
                 <div class="img-container">
                     <img src="https://course-api.com/images/store/product-1.jpeg" class="product-img">
                 </div>
@@ -42,7 +42,7 @@
                 </div>
                 <h3 class="product-title">high-back bench</h3>
                 <p class="price">$9.99</p>
-            </div>
+            </div> -->
         </div>
     </div>
     <script src="products.js"></script>
